# cody

./: .gitignore  Makefile.am  README.win32  aclocal.m4  configure.ac
share/: Makefile.am  cody.conf  cody.desktop  cody.xrc
share/icons/hicolor/: Makefile.am  index.theme
share/icons/hicolor/16x16/: Makefile.am
share/icons/hicolor/16x16/apps/: Makefile.am
share/icons/hicolor/24x24/actions/: Makefile.am
share/icons/hicolor/24x24/apps/: Makefile.am
share/icons/hicolor/32x32/: Makefile.am
share/icons/hicolor/32x32/actions/: Makefile.am
share/icons/hicolor/32x32/apps/: Makefile.am
share/icons/hicolor/48x48/apps/: Makefile.am
share/icons/hicolor/64x64/apps/: Makefile.am
share/icons/hicolor/scalable/: Makefile.am
share/icons/hicolor/scalable/apps/: Makefile.am
src/: Makefile.am  bookmark.cpp  bookmark.hpp  cody-app.cpp  cody-app.hpp  config-style.cpp  config-style.hpp  config-view.cpp  config-view.hpp  decls.hpp  dialog-boxes.cpp  dialog-boxes.hpp  editor-theme.cpp  editor-theme.hpp  fdartprov.cpp  fdartprov.hpp  file-type.cpp  file-type.hpp  main-frame.cpp  main-frame.hpp  main.cc  markbar.cpp  markbar.hpp  template-tools.hpp  text-document.cpp  text-document.hpp  text-frame.cpp  text-frame.hpp
