
icondir = $(datadir)/@PACKAGE@/icons/hicolor/24x24/actions

icon_DATA = \
	application-exit.png \
	bookmark-clear.png \
	bookmark-next.png \
	bookmark-prev.png \
	bookmark-toggle.png \
	document-close.png \
	document-new.png \
	document-open.png \
	document-revert.png \
	document-save.png \
	document-save-as.png \
	edit-copy.png \
	edit-cut.png \
	edit-delete.png \
	edit-find.png \
	edit-paste.png \
	edit-redo.png \
	edit-undo.png \
	go-down.png \
	go-next.png \
	go-previous.png \
	go-to-line.png \
	go-up.png \
	help-about.png \
	help-contents.png \
	end-of-lines.png \
	fast-find.png \
	indent-lines.png \
	line-numbers.png \
	long-lines.png \
	toggle-folder.png \
	white-spaces.png \
	wrap-mode.png



