
icondir = $(datadir)/@PACKAGE@/icons/hicolor/32x32/actions

icon_DATA = \
	application-exit.png \
	bookmark-clear.png \
	bookmark-new.png \
	bookmark-next.png \
	bookmark-prev.png \
	document-close.png \
	document-close-all.png \
	document-new.png \
	document-open.png \
	document-properties.png \
	document-reload.png \
	document-revert.png \
	document-save.png \
	document-save-all.png \
	document-save-as.png \
	edit-copy.png \
	edit-cut.png \
	edit-delete.png \
	edit-fast-find.png \
	edit-find.png \
	edit-find-replace.png \
	edit-paste.png \
	edit-redo.png \
	edit-select-all.png \
	edit-undo.png \
	format-justify-fill.png \
	go-down.png \
	go-jump.png \
	go-next.png \
	go-previous.png \
	go-up.png \
	help-about.png \
	help-contents.png \
	view-caret-line.png \
	view-end-of-lines.png \
	view-folder-margin.png \
	view-fullscreen.png \
	view-indent-lines.png \
	view-line-numbers.png \
	view-long-lines.png \
	view-marker-margin.png \
	view-split.png \
	view-toggle-folder.png \
	view-white-spaces.png \
	view-wrap-mode.png \
	view-zoom-0.png \
	view-zoom-in.png \
	view-zoom-out.png \
	window-new.png

